Closed Bug 1882943 Opened 4 months ago Closed 4 months ago

dom/gamepad/fallback/FallbackGamepad.cpp:17:42: error: no template named 'Tainted'

Categories

(Core :: DOM: Device Interfaces, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This happens when building the iOS port prototype with --disable-unified-build.

 0:25.35 /tmp/gecko/dom/gamepad/fallback/FallbackGamepad.cpp:17:42: error: no template named 'Tainted'
 0:25.35    17 | void SetGamepadLightIndicatorColor(const Tainted<GamepadHandle>&,
 0:25.35       |                                          ^
 0:25.36 /tmp/gecko/dom/gamepad/fallback/FallbackGamepad.cpp:18:42: error: no template named 'Tainted'
 0:25.36    18 |                                    const Tainted<uint32_t>&, const uint8_t&,
 0:25.36       |                                          ^
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/7bc07dabade7
Add missing header for Tainted. r=saschanaz
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: