Bug 1882943 - Add missing header for Tainted. r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D203220